--- a/banquetBuddy/catering_owners/templates/profile_company_edit.html
+++ b/banquetBuddy/catering_owners/templates/profile_company_edit.html
@@ -71,11 +71,12 @@
                                 {% endfor %}
                                 {% endif %}
                             </div>
+                            <div class="text-center mt-3">
+                                <button type="submit" class="btn btn-custom-blue">Save
+                                    Profile</button>
+                            </div>
+                            <br>
                         </div>
-                    </div>
-                    <div class="text-center mt-3">
-                        <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Save
-                            Profile</button>
                     </div>
                 </form>
             </div>
