--- a/banquetBuddy/catering_owners/templates/add_plate.html
+++ b/banquetBuddy/catering_owners/templates/add_plate.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-2">
-                    <button type="submit" class="btn btn-add">Add Plate</button>
+                    <button type="submit" class="btn btn-custom">Add Plate</button>
                 </div>
             </form>
         </div>
