--- a/banquetBuddy/catering_owners/templates/edit_menu.html
+++ b/banquetBuddy/catering_owners/templates/edit_menu.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="text-center mt-3">
-                    <button type="submit" class="btn btn-add">Save Menu</button>
+                    <button type="submit" class="btn btn-custom">Save Menu</button>
                 </div>
             </form>
         </div>
