--- a/banquetBuddy/catering_owners/templates/list_menus.html
+++ b/banquetBuddy/catering_owners/templates/list_menus.html
@@ -7,15 +7,6 @@
         border-color: #02483E !important; /* Cambia el color verde aquí */
     }
 
-    
-    #floating-button-container {
-        position: fixed;
-        top: 50px; /* Ajusta la distancia desde la parte inferior */
-        right: 12%;
-        z-index: 1000;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Agrega sombra al botón */
-    }
-
     .pagination .page-link {
         color: #02483E;
     }
@@ -26,9 +17,6 @@
     }
 
     @media screen and (max-width: 768px) {
-        #floating-button-container {
-            display: none;
-        }
         /* Tamaño de fuente más pequeño para dispositivos pequeños */
         .small-font {
             font-size: 15px;
@@ -37,9 +25,6 @@
     @media screen and (max-width: 600px) and (min-width: 451px) {
         p {
             font-size: 15px; /* Cambio de tamaño de fuente en dispositivos pequeños */
-        }
-        #floating-button-container {
-            right: 4%; /* Ajusta la distancia desde el lado derecho */
         }
         /* Tamaño de fuente más pequeño para dispositivos pequeños */
         .small-font {
@@ -53,9 +38,6 @@
         p {
             font-size: 12.5px; /* Cambio de tamaño de fuente en dispositivos pequeños */
         }
-        #floating-button-container {
-            right: 2%; /* Ajusta la distancia desde el lado derecho */
-        }
         /* Tamaño de fuente más pequeño para dispositivos pequeños */
         .small-font {
             font-size: 13px;
@@ -65,27 +47,6 @@
         }
     }
 </style>
-
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        var addButton = document.querySelector('.btn.btn-success');
-        var floatingButton = document.getElementById('floating-button-container');
-
-        function toggleFloatingButton() {
-            if (addButton && addButton.getBoundingClientRect().top < 0) {
-                floatingButton.style.display = 'block';
-            } else {
-                floatingButton.style.display = 'none';
-            }
-        }
-
-        toggleFloatingButton();
-
-        window.addEventListener('scroll', function() {
-            toggleFloatingButton();
-        });
-    });
-</script>
 
 {% if messages %}
 <div class="container mt-3">
@@ -113,7 +74,7 @@
         <div class="col-md-2">
             <a href="{% url 'add_menu' %}" class="text-decoration-none">
                 <button class="btn btn-add btn-block small-font">
-                    <i class="bi bi-plus-circle"></i> Add menu
+                    <i class="bi bi-plus-circle"></i> Add Menu
                 </button>
             </a>
         </div>
@@ -145,14 +106,7 @@
         </div>
         {% endfor %}
     </div>
-    <div id="floating-button-container">
-        <a href="{% url 'add_menu' %}" class="text-decoration-none">
-            <button class="btn btn-success small-font" style="background-color: #02483E;">
-                <i class="bi bi-plus-circle"></i> Add menu
-            </button>
-        </a>
-    </div>
-
+    
     <!-- Paginación -->
     <nav aria-label="Menu pagination">
         <ul class="pagination justify-content-center">
