--- a/banquetBuddy/catering_owners/templates/list_my_services.html
+++ b/banquetBuddy/catering_owners/templates/list_my_services.html
@@ -17,7 +17,6 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 4%;
     margin-left: 10%;
     margin-right: 10%;
   }
@@ -28,15 +27,19 @@
   }
 
   .btn-create:hover {
+    background-color: #01352e;
     color: white;
+  }
+
+  a {
     text-decoration: none !important;
   }
 </style>
 </style>
 
 <div class="container mt-3">
-  <h1 class="mb-4">Services list</h1>
-  <hr />
+  <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+    Services List</h2>
 
   {% if messages %}
   {% for message in messages %}
@@ -46,7 +49,7 @@
 
   <a href="{% url 'create_service' %}">
     <button class="btn btn-create mb-4">
-      Create a new service
+      Create New Service
     </button>
   </a>
 
@@ -54,9 +57,9 @@
     {% for service in services %}
     <div class="col-md-4">
       <div class="card mb-4 rounded-lg shadow">
-        <h5 class="card-title mt-4" style="text-align: center;">{{ service.name }}</h5>
+        <h4 class="card-title mt-4" style="text-align: center;">{{ service.name }}</h4>
         <div class="card-body text-dark">
-          <hr style="border-top: 2px solid black; width: 50%;">
+          <hr style="margin-top: 1px; border-top: 2px solid black; width: 50%;">
           <p class="card-text" style="text-align: center;">{{ service.description }}</p>
           <p class="card-text" style="text-align: center;">{{ service.location }}</p>
           <p class="card-text" style="text-align: center;">{{ service.capacity }} guests</p>
