--- a/banquetBuddy/catering_owners/templates/reservations.html
+++ b/banquetBuddy/catering_owners/templates/reservations.html
@@ -11,15 +11,9 @@
     <title>Event Bookings</title>
     <style>
         body {
-            font-family:  Verdana, Geneva, Tahoma, sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
-            color: #02483E;
-        }
-        h1 {
-            margin-top: 50px;
             color: #02483E;
         }
         .table-container {
@@ -54,10 +48,10 @@
         }
         a {
             text-decoration: none;
-            color: #007bff;
+            color: #54BFAF;
         }
         a:hover {
-            color: #0056b3;
+            color: #3f8c7f;
         }
 
         @media screen and (max-width: 450px) {
@@ -71,7 +65,7 @@
             }
         }
         @media screen and (max-width: 450px) {
-            h1 {
+            h2 {
                 font-size: 24px; /* Cambio de tamaño de fuente en dispositivos pequeños */
             }
         }
@@ -79,34 +73,42 @@
 </head>
 <body>
 
-  <h1>Event Bookings</h1>
+    <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+        Event Bookings</h2>
 
-  <div class="table-container">
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Date</th>
-          <th>Booking State</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for reservation in reservations %}
-          <tr>
-            <td>{{ reservation.name }}</td>
-            <td>{{ reservation.date }}</td>
-            {% if reservation.booking_state == "CONTRACT_PENDING" %}
-            <td>CONTRACT PENDING</td>
-            {% else %}
-            <td>{{ reservation.booking_state}}</td>
-            {% endif %}
-            <td><a href="{% url 'view_reservation' catering_service_id=catering_service.id event_id=reservation.id %}">View Details</a></td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
+    {% if reservations %}
+    <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Date</th>
+                    <th>Booking State</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for reservation in reservations %}
+                <tr>
+                    <td>{{ reservation.name }}</td>
+                    <td>{{ reservation.date }}</td>
+                    {% if reservation.booking_state == "CONTRACT_PENDING" %}
+                    <td>CONTRACT PENDING</td>
+                    {% else %}
+                    <td>{{ reservation.booking_state}}</td>
+                    {% endif %}
+                    <td><a href="{% url 'view_reservation' catering_service_id=catering_service.id event_id=reservation.id %}">View Details</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% else %}
+    <div class="col">
+        <p class="mb-4 text-center small-font" style="color: #02483E; font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+            No reservations yet</p>
+    </div>
+    {% endif %}
 
 </body>
 </html>
