--- a/banquetBuddy/core/templates/core/error_report.html
+++ b/banquetBuddy/core/templates/core/error_report.html
@@ -3,7 +3,7 @@
 {% block content %}
 <style>
     .error-report-container {
-        margin-top: 50px;
+        margin-top: 30px;
         background-color: #fff;
         padding: 20px;
         border-radius: 10px;
@@ -21,6 +21,7 @@
 
     label {
         font-weight: bold;
+        color: #02483E;
     }
 
     textarea {
