--- a/banquetBuddy/core/templates/core/notifications.html
+++ b/banquetBuddy/core/templates/core/notifications.html
@@ -39,7 +39,7 @@
     <div class="list">
         <form method="post" action="{% url 'mark_as_read' %}">
             {% csrf_token %}
-            <button class="btn btn-primary btn-add my-2 my-sm-0" type="submit">Mark as read</button>
+            <button class="btn btn-primary btn-add my-2 my-sm-0" type="submit" style="margin-left: 15px;">Mark as read</button>
         </form>
         {% for notification in notifications %}
         <div class="notification">
@@ -49,6 +49,11 @@
             <h4 class="notificationTitle">{{ notification.event.name }}</h4>
         {% endif %}
             <h5>{{ notification.message }}</h5>
+        </div>
+        {% empty %}
+        <div class="col">
+            <p class="small-font" style="color: #02483E; margin-top: 10px; font-family: 'Merriweather', sans-serif; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+                No notifications</p>
         </div>
         {% endfor %}
     </div>
