--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -131,7 +131,7 @@
             </div>
             {% if price_plan == "PREMIUM" %}
             <div class="plan-btn" style="margin-top:20% ;">
-                <button type="button" href="" class="btn btn-danger"><a href="{% url 'catering_unsuscribe' %}"
+                <button type="button" href="" class="btn btn-danger" name = "cancel_subscription_premium"><a href="{% url 'catering_unsuscribe' %}"
                         class="text-decoration-none text-light">Cancel subscription</a></button>
             </div>
             {%elif price_plan == "PREMIUM_PRO"%}
