--- a/banquetBuddy/catering_employees/templates/employee_offer_list.html
+++ b/banquetBuddy/catering_employees/templates/employee_offer_list.html
@@ -49,8 +49,10 @@
     {% for offer in offers %}
     <div class="offer">
         <h2 class="offerTitle">{{ offer.title }}</h2>
-        <h3>Date Range: {{ offer.start_date|date:"Y-m-d" }} to {{ offer.end_date|date:"Y-m-d" }}</h3>
-        <h4>{{ offer.location }}</h4>
+        <h3>Job Dates: {{ offer.start_date|date:"Y-m-d" }} to {{ offer.end_date|date:"Y-m-d" }}</h3>
+        <h4>Company: {{offer.cateringservice.cateringcompany }}</h4>
+        <h4>Service: {{offer.cateringservice }}</h4>
+        <h4>Location: {{ offer.location }}</h4>
         <p>{{ offer.description }}</p>
         {% if applications|get_item:offer.id %}
             <p style="color: red;">You've already applied for this offer</p>
