--- a/banquetBuddy/core/templates/core/actual_terms_and_conditions.html
+++ b/banquetBuddy/core/templates/core/actual_terms_and_conditions.html
@@ -33,8 +33,8 @@
             <p>To access certain features, users must create an account by providing true and complete information. Users are responsible for maintaining the confidentiality of their login credentials and all activities that occur under their account. BanquetBuddy reserves the right to suspend or delete accounts that violate these Terms and Conditions.</p>
             <hr style="background-color: #54bfaf;">
 
-            <h2 style="color: #54bfaf;">5. Política de Privacidad</h2>
-            <p>Para información detallada sobre el tratamiento de sus datos personales, incluyendo cómo respondemos a las violaciones de datos, por favor refiérase a nuestra <a href="{% url 'privacy_policy' %}">Política de Privacidad</a>.</p>
+            <h2 style="color: #54bfaf;">5. Privacy Policy</h2>
+            <p>For detailed information on the processing of your personal data, including how we respond to data breaches, please refer to our <a href="{% url 'privacy_policy' %}" style="color: #54bfaf; font-weight: bold;">Privacy Policy</a>.</p>
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">6. Limitation of Liability</h2>
@@ -68,7 +68,7 @@
 
             <!-- Reference to previous terms -->
             <div class="text-center mt-4">
-                <p>Para consultar versiones anteriores de nuestros Términos y Condiciones, acceda a nuestro <a href="{% url 'previous_terms' %}">archivo de términos</a>.</p>
+                <p>To view previous versions of our Terms and Conditions, please visit our <a href="{% url 'previous_terms' %}" style="color: #54bfaf; font-weight: bold;">terms archive</a>.</p>
 
         </div>
     </div>
