--- a/banquetBuddy/core/templates/core/subscriptionsplans.html
+++ b/banquetBuddy/core/templates/core/subscriptionsplans.html
@@ -105,7 +105,7 @@
             <div class="plan-btn" style="margin-top:30%;">
                 <button type="button" class="btn btn-danger">
                     <a href="{% url 'catering_unsuscribe' %}" class="text-decoration-none text-light">
-                        <span class="btn-text">Cancelar subscripción</span>
+                        <span class="btn-text">Cancel subscription</span>
                     </a>
                 </button>
             </div>
@@ -146,7 +146,7 @@
             <div class="plan-btn" style="margin-top:20%;">
                 <button type="button" class="btn btn-danger">
                     <a href="{% url 'catering_unsuscribe' %}" class="text-decoration-none text-light">
-                        <span class="btn-text">Cancelar subscripción</span>
+                        <span class="btn-text">Cancel subscription</span>
                     </a>
                 </button>
             </div>
@@ -188,7 +188,7 @@
             <div class="plan-btn" style="margin-top:15%;">
                 <button type="button" class="btn btn-danger">
                     <a href="{% url 'catering_unsuscribe' %}" class="text-decoration-none text-light">
-                        <span class="btn-text">Cancelar subscripción</span>
+                        <span class="btn-text">Cancel subscription</span>
                     </a>
                 </button>
             </div>
