--- a/banquetBuddy/catering_owners/templates/manage_tasks.html
+++ b/banquetBuddy/catering_owners/templates/manage_tasks.html
@@ -281,7 +281,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" onclick="submitEditForm()">Save changes</button>
+                <button type="button" class="btn btn-primary" onclick="submitEditForm()">Save Changes</button>
             </div>
         </div>
     </div>
