--- a/banquetBuddy/catering_owners/templates/task_edit_form.html
+++ b/banquetBuddy/catering_owners/templates/task_edit_form.html
@@ -1,5 +1,5 @@
 <form method="post" action="{% url 'update_task' task.id %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save changes</button>
+    <button type="submit" class="btn btn-primary">Save Changes</button>
 </form>
