--- a/banquetBuddy/catering_particular/templates/booking_process.html
+++ b/banquetBuddy/catering_particular/templates/booking_process.html
@@ -19,6 +19,10 @@
       <div class="alert alert-danger">There were errors in the form. Please correct the highlighted fields.</div>
       {% endif %}
 
+      {% if form_error_guests %}
+      <div class="alert alert-danger">The number of guests can not be 0.</div>
+      {% endif %}
+
       {% if form_error_menu %}
       <div class="alert alert-danger">You have to select a menu.</div>
       {% endif %}
@@ -50,33 +54,35 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        {% for menu in menus %}
-        <div class="col-md-4 mb-4">
-          <div class="card h-100 d-flex flex-column shadow-sm custom-card-bg">
-            <div class="card-body flex-fill d-flex flex-column">
-              <h4 class="card-title">{{ menu.name }}</h4>
-              <p class="card-text">{{ menu.description }}</p>
-              <div class="mt-auto">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-add select-menu"
-                    data-menu-id="{{ menu.id }}">Select</button>
+      <div class="form-group">
+        <label for="menu">Select Menu:</label>
+        <div class="row">
+          {% for menu in menus %}
+          <div class="col-md-4 mb-4">
+            <div class="card h-100 d-flex flex-column shadow-sm custom-card-bg">
+              <div class="card-body flex-fill d-flex flex-column">
+                <h4 class="card-title">{{ menu.name }}</h4>
+                <p class="card-text">{{ menu.description }}</p>
+                <div class="mt-auto">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-add select-menu"
+                      data-menu-id="{{ menu.id }}">Select</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          {% endfor %}
+          <input type="hidden" name="selected_menu" id="selected_menu">
         </div>
-        {% endfor %}
-        <input type="hidden" name="selected_menu" id="selected_menu">
+        </br>
       </div>
-      </br>
       <div class="text-center">
-        <button type="submit" class="btn btn-custom" form="bookingForm">Confirmar</button>
+        <button type="submit" class="btn btn-custom" form="bookingForm">Confirm</button>
       </div>
       <p></p>
     </form>
   </div>
-</div>
 </div>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
@@ -94,10 +100,10 @@
 
     selectButtons.forEach(button => {
       button.addEventListener('click', function () {
-        // Remover la clase 'selected' de todos los botones
+        // Remover la clase 'btn-selected' de todos los botones
         selectButtons.forEach(btn => btn.classList.remove('btn-select'));
 
-        // Agregar la clase 'selected' al botón seleccionado
+        // Agregar la clase 'btn-selected' al botón seleccionado
         this.classList.add('btn-select');
 
         const menuId = this.getAttribute('data-menu-id');
