--- a/banquetBuddy/core/templates/core/profile_edit.html
+++ b/banquetBuddy/core/templates/core/profile_edit.html
@@ -27,7 +27,7 @@
           <form method="post" action="{% url 'profile_edit' %}" id="userForm" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
-              <label for="email" class="text-white">Mail:</label>
+              <label for="email" class="text-white">Email:</label>
               <input
                 type="email"
                 class="form-control"
@@ -83,7 +83,7 @@
             {% endif %}
           
             <div class="text-center mt-3">
-              <button type="submit" class="btn btn-custom-blue">Save</button>
+              <button type="submit" class="btn btn-custom-blue">Save Changes</button>
             </div>
           </form>
         </div>
