--- a/banquetBuddy/core/templates/core/login.html
+++ b/banquetBuddy/core/templates/core/login.html
@@ -70,10 +70,12 @@
                 <h2 class="login-heading">Login</h2>
                 <form method="post">
                     {% csrf_token %}
-                    {% if form.non_field_errors %}
+                    {% if form.errors %}
                         <div class="alert alert-danger">
-                            {% for error in form.non_field_errors %}
-                                <p>{{ error }}</p>
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <p>{{ error }}</p>
+                                {% endfor %}
                             {% endfor %}
                         </div>
                     {% endif %}
