--- a/banquetBuddy/catering_owners/templates/list_employee.html
+++ b/banquetBuddy/catering_owners/templates/list_employee.html
@@ -67,18 +67,29 @@
         </div>
         {% endfor %}
         <nav aria-label="Employee page navigation">
-          <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page=1">First</a></li>
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
-            {% endif %}
-            <li class="page-item disabled"><a class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a></li>
-            {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-                <li class="page-item"><a the "page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a></li>
-            {% endif %}
-          </ul>
-        </nav>
+            <ul class="pagination justify-content-center">
+              {% if page_obj.has_previous %}
+                  <li class="page-item">
+                      <a class="page-link" href="?page=1&status={{ request.GET.status }}">First</a>
+                  </li>
+                  <li class="page-item">
+                      <a class="page-link" href="?page={{ page_obj.previous_page_number }}&status={{ request.GET.status }}">Previous</a>
+                  </li>
+              {% endif %}
+              <li class="page-item disabled">
+                  <a class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a>
+              </li>
+              {% if page_obj.has_next %}
+                  <li class="page-item">
+                      <a class="page-link" href="?page={{ page_obj.next_page_number }}&status={{ request.GET.status }}">Next</a>
+                  </li>
+                  <li class="page-item">
+                      <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}&status={{ request.GET.status }}">Last</a>
+                  </li>
+              {% endif %}
+            </ul>
+          </nav>
+          
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
