--- a/banquetBuddy/core/templates/core/login.html
+++ b/banquetBuddy/core/templates/core/login.html
@@ -70,12 +70,10 @@
                 <h2 class="login-heading">Login</h2>
                 <form method="post">
                     {% csrf_token %}
-                    {% if form.errors %}
+                    {% if form.non_field_errors %}
                         <div class="alert alert-danger">
-                            {% for field in form %}
-                                {% for error in field.errors %}
-                                    <p>{{ error }}</p>
-                                {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <p>{{ error }}</p>
                             {% endfor %}
                         </div>
                     {% endif %}
