fix: Translate button message

--- a/banquetBuddy/catering_particular/templates/booking_process.html
+++ b/banquetBuddy/catering_particular/templates/booking_process.html
@@ -68,7 +68,7 @@
             </div>
           </br>
           <div class="text-center">
-            <button type="submit" class="btn btn-primary" form="bookingForm">Confirmar</button>
+            <button type="submit" class="btn btn-primary" form="bookingForm">Confirm</button>
           </div>
           <p></p>
       </form>
